[package]
name = "unix_mode"
version = "0.1.4-pre"
authors = ["Martin Pool <mbp@sourcefrog.net>"]
edition = "2018"
description = "Decode, interpret, and display Unix file mode bits (even on non-Unix platforms)"
license = "Apache-2.0"
repository = "https://github.com/sourcefrog/unix_mode"

[dependencies]

[target.'cfg(unix)'.dev-dependencies]
tempfile = "3.2"
nix = "0.22"
